welcome.lessons.welcome.methods.basics.MethodsDogHouse.scala.error
MethodsDogHouse:16: error: expected class or object definition
dogHouse();
^MethodsDogHouse:17: error: expected class or object definition
def Turn() {
^MethodsDogHouse:25: error: expected class or object definition
Turn();Turn();Turn();Turn();
^MethodsDogHouse:25: error: expected class or object definition
Turn();Turn();Turn();Turn();
       ^MethodsDogHouse:25: error: expected class or object definition
Turn();Turn();Turn();Turn();
              ^MethodsDogHouse:25: error: expected class or object definition
Turn();Turn();Turn();Turn();
                     ^MethodsDogHouse:30: error: expected start of definition
	override def run() {
                 ^MethodsDogHouse:61: error: Unmatched closing brace '}' ignored here
}
^