welcome.lessons.welcome.methods.basics.MethodsDogHouse.scala.code

	avance()
	avance()
	left()
	avance()
	avance()
	left()
	avance()
	avance()
	left()
	avance()
	avance()
	left()
}
dogHouse();
def Turn() {
	dogHouse();
     forward();
     forward();
     forward();
     forward();
     left();
}
Turn();Turn();Turn();Turn();
            
